--- a/_posts/0000-01-02-rentis.md
+++ b/_posts/0000-01-02-rentis.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+"Mejor one hour of free life than 40 years of slavery and jail" - Rigas Ferraios
 Use the left arrow to go back!
